src/objects/CCF_Request_Header__c.object
<CustomObject>
    <description>CCF Request Application</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Instructions_for_CPMO__c</fullName>
        <label>Additional Instructions for CPMO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Threshold_limit_Percentage__c</fullName>
        <defaultValue>80/100</defaultValue>
        <inlineHelpText>The default threshold limit is set at 80% but the buyer has the option to set his/her own threshold limit for the contract.</inlineHelpText>
        <label>Alert Threshold limit Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Applicable_Incoterms__c</fullName>
        <inlineHelpText>This is for the contract exec summary only.
Please enter range of applicable terms e.g. EXW, FCA</inlineHelpText>
        <label>Applicable Incoterms</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_System__c</fullName>
        <label>Business System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P1PCLNT010</fullName>
                </value>
                <value>
                    <fullName>HP1CLNT300</fullName>
                </value>
                <value>
                    <fullName>S1PCLNT010</fullName>
                </value>
                <value>
                    <fullName>R1PCLNT100</fullName>
                </value>
                <value>
                    <fullName>Sourcing (Local)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Category__c</fullName>
        <formula>TEXT(Network__c)  &amp;&quot;-&quot;&amp;  TEXT(Portfolio__c)</formula>
        <label>Buying Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCF_Supplier_Contact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the supplier contact signing the contract is different from the person mentioned above.</inlineHelpText>
        <label>Supplier Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Supplier_Name__c</field>
                <operation>equals</operation>
                <valueField>Supplier_Contact__c.Supplier_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Supplier_Contact__c</referenceTo>
        <relationshipLabel>CCF Request (CCF Supplier Contact)</relationshipLabel>
        <relationshipName>CCF_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTC_Type__c</fullName>
        <label>CTC Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volume Based</fullName>
                </value>
                <value>
                    <fullName>Date Based</fullName>
                    <default>true</default>
                    <label>Date Based</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <inlineHelpText>Please select &quot;Global&quot; incase the contract is applicable for more than one cluster.</inlineHelpText>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                    <default>true</default>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NAMET and RUB</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>North Asia</fullName>
                </value>
                <value>
                    <fullName>SEAA</fullName>
                </value>
                <value>
                    <fullName>South Asia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collaborators__c</fullName>
        <inlineHelpText>Please enter email ids of all participating collaborator team/participants. Especially cluster procurement teams. 

You can copy paste email ids from outlook.</inlineHelpText>
        <label>Collaborators</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Supplier_Name__c</fullName>
        <label>Contact Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Telephone_Number__c</fullName>
        <label>Contact Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contract_Board_Approved__c</fullName>
        <label>Contract Board Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Description__c</fullName>
        <label>Contract Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Legal_Template__c</fullName>
        <label>Contract Legal Template</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blank CTC</fullName>
                </value>
                <value>
                    <fullName>UPC AAR LATAM - Multi Country - Date Based</fullName>
                </value>
                <value>
                    <fullName>UPC AAR LATAM - Multi Country - Volume Based</fullName>
                </value>
                <value>
                    <fullName>UPC USCC - Date Based</fullName>
                </value>
                <value>
                    <fullName>UPC USCC - Volume Based</fullName>
                </value>
                <value>
                    <fullName>UPC UASCC - Date Based</fullName>
                </value>
                <value>
                    <fullName>UPC UASCC - Volume Based</fullName>
                </value>
                <value>
                    <fullName>UPC Europe - Non-Hub - Date Based</fullName>
                </value>
                <value>
                    <fullName>UPC Europe - Non-Hub - Volume Based</fullName>
                </value>
                <value>
                    <fullName>CTC 1.0</fullName>
                </value>
                <value>
                    <fullName>CTC 1.0 Product and Price Details with Upstream buy</fullName>
                </value>
                <value>
                    <fullName>CTC 2.0</fullName>
                </value>
                <value>
                    <fullName>CTC 2.0 Product and Price Details with Upstream buy</fullName>
                </value>
                <value>
                    <fullName>CTC 1.0 3PM (NA)</fullName>
                </value>
                <value>
                    <fullName>CTC 1.0 3PM (NAME and Africa)</fullName>
                </value>
                <value>
                    <fullName>CTC 1.0 3PM</fullName>
                </value>
                <value>
                    <fullName>CTC 2.0 3PM (NA)</fullName>
                </value>
                <value>
                    <fullName>CTC 2.0 3PM (NAME and Africa)</fullName>
                </value>
                <value>
                    <fullName>CTC 2.0 3PM</fullName>
                </value>
                <value>
                    <fullName>CTC 1.0_Product and Price Details with Upstream-Directed Buying</fullName>
                </value>
                <value>
                    <fullName>CTC 2.0_Product and Price Details with Upstream-Directed Buying</fullName>
                </value>
                <value>
                    <fullName>UPC AAR/LATAM - Single Buyer - local to local - Date based</fullName>
                </value>
                <value>
                    <fullName>UPC AAR/LATAM - Single Buyer - local to local - Volume based</fullName>
                </value>
                <value>
                    <fullName>UPC AAR/LATAM - Single Buyer - Date based</fullName>
                </value>
                <value>
                    <fullName>UPC AAR/LATAM - Single Buyer - Volume based</fullName>
                </value>
                <value>
                    <fullName>Contract for Production Items</fullName>
                </value>
                <value>
                    <fullName>CTC 1.0 2P Transactions</fullName>
                </value>
                <value>
                    <fullName>Contract for 3PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <description>Enter Contract Document name.
Max 40 characters
Follow the below syntax for the name
[Supplier name]_[Portfolio Descriptor]_[validity year-month]</description>
        <label>Contract Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person responsible for the Master Agreement.</inlineHelpText>
        <label>Contract Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CCF_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Supplier_Tier_Status__c</fullName>
        <label>Contract Supplier Tier Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracting_Currency__c</fullName>
        <label>Contracting Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UEE</fullName>
                </value>
                <value>
                    <fullName>US2</fullName>
                </value>
                <value>
                    <fullName>USM</fullName>
                </value>
                <value>
                    <fullName>UYU</fullName>
                </value>
                <value>
                    <fullName>VEB</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>XOF</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracting_Method__c</fullName>
        <inlineHelpText>Method 1: A person employed by the HUB is fully involved in the negotiation process with the supplier and leads the discussion. The person concludes the negotiations with the supplier as the employee of the HUB in line with the Schedule of Authority.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracting_Scope__c</fullName>
        <inlineHelpText>&quot;
Hub: Contract in the name of following supply chain companies: USCC, UASCC, UAPL or UBMS.
Non-Hub: Contract in the name of local supply chain Co/Op Co for LATAM only.
Limited Scope: Contract in the name of local supply chain Co/Op Co for AAR only.</inlineHelpText>
        <label>Contracting Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hub</fullName>
                </value>
                <value>
                    <fullName>Non-Hub</fullName>
                </value>
                <value>
                    <fullName>Limited Scope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracts_Requires_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracts Requires Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Model_Check_Comparison_Done__c</fullName>
        <label>Cost Model Check / Comparison Done</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country1__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cluster__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All Countries</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Cote d&apos;ivoire</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Djibouti</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Ethiopia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_mail_Address__c</fullName>
        <label>E-mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimates_Contract_Value__c</fullName>
        <label>Estimates Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>The expiration date should be greater than the effective date</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hybrid_Material__c</fullName>
        <label>Hybrid Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>The laguage in which the legal contract (word document) needs to be created.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Legal_Template__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity_Signing_the_Contract__c</fullName>
        <label>Legal Entity Signing the Contract</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>------Global----------</fullName>
                </value>
                <value>
                    <fullName>2611 - USCC_AG</fullName>
                </value>
                <value>
                    <fullName>3009 - Unilever_Asia_Private_Ltd</fullName>
                </value>
                <value>
                    <fullName>5487 - Unilever_ASCC_AG</fullName>
                </value>
                <value>
                    <fullName>------Local----------</fullName>
                </value>
                <value>
                    <fullName>1012 - Unilever Iran (Dubai)</fullName>
                </value>
                <value>
                    <fullName>1013 - Unilever Iran (Iran)</fullName>
                </value>
                <value>
                    <fullName>1295 - Unilever UK Limited</fullName>
                </value>
                <value>
                    <fullName>1388 - Unilever UKCR Ltd</fullName>
                </value>
                <value>
                    <fullName>1389 - UKH Unilever UK Holdings</fullName>
                </value>
                <value>
                    <fullName>1403 - Unilever Bestfoods UK Lim</fullName>
                </value>
                <value>
                    <fullName>1524 - Unilever Australia (Holdi</fullName>
                </value>
                <value>
                    <fullName>1525 - Unilever Australia Ltd.</fullName>
                </value>
                <value>
                    <fullName>1532 - Unilever Bangladesh Ltd</fullName>
                </value>
                <value>
                    <fullName>1562 - UNILEVER COTE D&apos;IVOIRE</fullName>
                </value>
                <value>
                    <fullName>1601 - UNILEVER GHANA LTD</fullName>
                </value>
                <value>
                    <fullName>1655 - UNILEVER KENYA LIMITED</fullName>
                </value>
                <value>
                    <fullName>1675 - UNILEVER MALAWI LIMITED</fullName>
                </value>
                <value>
                    <fullName>1682 - Unilever (M) Holdings</fullName>
                </value>
                <value>
                    <fullName>1698 - Unilever New Zealand Ltd</fullName>
                </value>
                <value>
                    <fullName>1714 - Unilever Pakistan Limited</fullName>
                </value>
                <value>
                    <fullName>1715 - Levers Associated</fullName>
                </value>
                <value>
                    <fullName>1728 - Unilever Singapore Pte Lt</fullName>
                </value>
                <value>
                    <fullName>1747 - Unilever SA (Pty) Ltd</fullName>
                </value>
                <value>
                    <fullName>1779 - UL Market Dev. (Pty) Ltd</fullName>
                </value>
                <value>
                    <fullName>1803 - UOH AG</fullName>
                </value>
                <value>
                    <fullName>1807 - UNILEVER TANZANIA LIMITED</fullName>
                </value>
                <value>
                    <fullName>1815 - Unilever Caribbean Ltd.</fullName>
                </value>
                <value>
                    <fullName>1819 - UNILEVER UGANDA LIMITED</fullName>
                </value>
                <value>
                    <fullName>1840 - UNILEVER ZIMBABWE PVT LTD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Agreement_Request_Type__c</fullName>
        <label>Master Agreement Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Contract</fullName>
                </value>
                <value>
                    <fullName>Amend Contract</fullName>
                </value>
                <value>
                    <fullName>Renew Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mechanistic__c</fullName>
        <label>Mechanistic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_common_Payment_Terms__c</fullName>
        <inlineHelpText>In case of multiple payment terms at line item level please enter the most common code.</inlineHelpText>
        <label>Most common Payment Terms</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Commodities</fullName>
                </value>
                <value>
                    <fullName>Food Ingredients</fullName>
                </value>
                <value>
                    <fullName>Supply Chain Procurement</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Tea</fullName>
                </value>
                <value>
                    <fullName>Markets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTM_Contact_Name__c</fullName>
        <label>OTM - Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_Email_Contact__c</fullName>
        <label>OTM - Email Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OTM_Phone_Number__c</fullName>
        <label>OTM - Phone Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Penalty_Clause_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Penalty Clause Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Network__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chemicals - All</fullName>
                </value>
                <value>
                    <fullName>Fragrances &amp; Flavours</fullName>
                </value>
                <value>
                    <fullName>Fine Chemicals</fullName>
                </value>
                <value>
                    <fullName>Inorganics</fullName>
                </value>
                <value>
                    <fullName>Oleochemicals</fullName>
                </value>
                <value>
                    <fullName>Petrochemicals</fullName>
                </value>
                <value>
                    <fullName>Commodities All</fullName>
                </value>
                <value>
                    <fullName>Liquid Oils</fullName>
                </value>
                <value>
                    <fullName>Soft Commodities</fullName>
                </value>
                <value>
                    <fullName>Tropical Oils</fullName>
                </value>
                <value>
                    <fullName>Food Ingredients - All</fullName>
                </value>
                <value>
                    <fullName>Processed Ingredients</fullName>
                </value>
                <value>
                    <fullName>Farmed Ingredients</fullName>
                </value>
                <value>
                    <fullName>3PM</fullName>
                </value>
                <value>
                    <fullName>Packaging - All</fullName>
                </value>
                <value>
                    <fullName>Actuators and Valves</fullName>
                </value>
                <value>
                    <fullName>Aerosol Cans</fullName>
                </value>
                <value>
                    <fullName>Bottles</fullName>
                </value>
                <value>
                    <fullName>Caps</fullName>
                </value>
                <value>
                    <fullName>Closures</fullName>
                </value>
                <value>
                    <fullName>Contact Flexibles</fullName>
                </value>
                <value>
                    <fullName>Customer Packaging</fullName>
                </value>
                <value>
                    <fullName>Decoration</fullName>
                </value>
                <value>
                    <fullName>Feedstock Laminates</fullName>
                </value>
                <value>
                    <fullName>Feedstock Paper and Board</fullName>
                </value>
                <value>
                    <fullName>Feedstock Rigid Plastic</fullName>
                </value>
                <value>
                    <fullName>Flexible Packaging</fullName>
                </value>
                <value>
                    <fullName>Folding Cartons, Aseptic Packaging and IC Pots</fullName>
                </value>
                <value>
                    <fullName>Glass</fullName>
                </value>
                <value>
                    <fullName>IC Sticks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Code_Zip__c</fullName>
        <label>Post Code/Zip</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisional_Contract__c</fullName>
        <label>Provisional Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_commodity_description__c</fullName>
        <label>Purchase commodity description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_State__c</fullName>
        <label>Region/State</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Reminder_Date__c</fullName>
        <defaultValue>TODAY() + 30</defaultValue>
        <label>Renewal Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>IF( OwnerId&lt;&gt;$User.Id , &apos;Collaborator&apos;, &apos;Owner&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_CLM_Contract_Reference__c</fullName>
        <label>SAP CLM Contract Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRM_Critical_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SRM Critical Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signatory_Country__c</fullName>
        <label>Unilever Signatory Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Market Input in Progress</fullName>
                </value>
                <value>
                    <fullName>Market Input Complete</fullName>
                </value>
                <value>
                    <fullName>Validation In Progress</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Validation Failed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Needs Correction</fullName>
                </value>
                <value>
                    <fullName>Contract Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Code__c</fullName>
        <label>Supplier Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Email_CC_list__c</fullName>
        <label>Supplier Contact Email CC list</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Email_To_list1__c</fullName>
        <label>Supplier Contact Email To list</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>